// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fork 1`] = `
{
  "f": [
    [
      "type",
      "ITEM",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "BAR",
          ],
        ],
      },
    ],
    [
      "key",
      1,
    ],
  ],
}
`;

exports[`fork 2`] = `
{
  "f": [
    [
      "type",
      "ITEM",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "BAR",
          ],
        ],
      },
    ],
    [
      "key",
      2,
    ],
  ],
}
`;

exports[`fork 3`] = `
{
  "f": [
    [
      "type",
      "ITEM",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "BAR2",
          ],
        ],
      },
    ],
    [
      "key",
      2,
    ],
  ],
}
`;

exports[`fork 4`] = `
{
  "f": [
    [
      "type",
      "ITEM",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "DELETE",
          ],
        ],
      },
    ],
    [
      "key",
      1,
    ],
  ],
}
`;

exports[`fork 5`] = `
{
  "f": [
    [
      "type",
      "ITEM",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "BAR",
          ],
        ],
      },
    ],
    [
      "key",
      2,
    ],
  ],
}
`;

exports[`fork 6`] = `
{
  "f": [
    [
      "type",
      "ITEM",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "BAR2",
          ],
        ],
      },
    ],
    [
      "key",
      2,
    ],
  ],
}
`;

exports[`fork 7`] = `
{
  "f": [
    [
      "type",
      "ITEM",
    ],
    [
      "value",
      {
        "f": [
          [
            "type",
            "DELETE",
          ],
        ],
      },
    ],
    [
      "key",
      2,
    ],
  ],
}
`;
